--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <section id="geolocation">
                 <h2>Geolocation</h2>
                 <hr>
-                <button onclick="Location()">Current Location</button
+                <button onclick="Location()">Current Location</button>
                 <br>
                 <label>Latitude: </label>
                 <label id="latitude">Latitude Result</label>
