--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <hr>
                 <button onclick="CapturePhoto()">Take Picture</button>
                  <br>
-            <img id="snapshot" src="" />
+            <img id="snapshot" src="images/default.gif" />
              <br>
              <br>
             </section>
