--- a/index.html
+++ b/index.html
@@ -148,11 +148,12 @@
             <section id="contacts">
                 <h2>Access Contacts</h2>
                 <hr>
-                <button onclick="PickContact()">Pick A Contact</button>
+                <button onclick="PickContact()">View Contacts</button>
                 <br>
                 <br>
-                <label>Contact Name: </label>
-               <label id="contactname"></label>
+                <label>Search: </label><label id="example"> Last name only! </label>
+                <input type="text" id="contactname"><br><br>
+               <button onclick="FindContact()">Find Contact</button>
             </section>
             
             <section id="about">
