--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                 <button onclick="PickContact()">View Contacts</button>
                 <br>
                 <br>
-                <label>Search: </label><label id="example"> Last name only! </label>
-                <input type="text" id="contactname"><br><br>
+                <label>Search: </label>
+                <input type="text" id="contactname"><label id="example"> Last name only! </label><br><br>
                <button onclick="FindContact()">Find Contact</button>
             </section>
             
