--- a/index.html
+++ b/index.html
@@ -149,10 +149,11 @@
                 <h2>Access Contacts</h2>
                 <hr>
                 <button onclick="PickContact()">View Contacts</button>
+                <label id="contactname">Search: </label>
                 <br>
                 <br>
                 <label>Search: </label>
-                <input type="text" id="contactname"><label id="example"> Last name only! </label><br><br>
+                <input type="text" id="lastname"><label id="example"> Last name only! </label><br><br>
                <button onclick="FindContact()">Find Contact</button>
             </section>
             
