--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
             <section id="contacts">
                 <h2>Access Contacts</h2>
                 <hr>
-                <button onclick="PickContact()">View Contacts</button>
-                <label id="contactname">Search: </label>
+                <center><button onclick="PickContact()">View Contacts</button>
+                <br>
+                <label id="contactname"></label>
                 <br>
                 <br>
-                <label>Search: </label>
-                <input type="text" id="lastname"><label id="example"> Last name only! </label><br><br>
-               <button onclick="FindContact()">Find Contact</button>
+                <br>
+               <button onclick="findContacts()">Find Contact</button></center>
             </section>
             
             <section id="about">
