--- a/index.html
+++ b/index.html
@@ -153,8 +153,12 @@
                 <label id="contactname"></label>
                 <br>
                 <br>
+                <hr>
                 <br>
-               <button onclick="findContacts()">Find Contact</button></center>
+                <p id="lastName">Search:<input type="text" id="lastname"><label id="example2"> Last name only!</label><br>
+                </p><br>
+               <button onclick="findContacts()">Find Contacts</button></center>
+                
             </section>
             
             <section id="about">
