--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <p id="lastName">Search:<input type="text" id="lastname">
                 <button onclick="findContacts()">Find Contacts</button><br>
                 <label id="example2">Last name only!</label>
-                <br><label id="searchname"></label>
+                <br><br><label id="searchname"></label>
                 </p><br>
                
                 
