--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
                 <h2>Battery Status</h2>
                 <hr>
                 <br>
-                <center><button onclick="onBatteryStatus()">Current Status</button></center>
+                <button onclick="onBatteryStatus()">Current Status</button>
+                <br><br><label id="percentage"></label>
             </section>
             
             
